[metadata]
name = sllib
version = 0.2.1
author = Peter Magnusson    
author_email = me@kmpm.se
description = Library for reading SLG, SL2 and SL3 files from Lowrance fishfinders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opensounder/python-sllib
project_urls =
    Bug Tracker = https://github.com/opensounder/python-sllib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

packages = 
    sllib
python_requires = >=3.6
